...
    label: String,
    passwordVisible: Boolean,
    onTogglePasswordVisibility: () -> Unit,
    isError: Boolean = false,
    enabled: Boolean,
    modifier: Modifier = Modifier,
    testTag: String = "signUpPasswordField" // Default test tag, can be overriden for confirm password field
) {
    OutlinedTextField(
        value = value,
        onValueChange = onValueChange,
        label = { Text(label, color = MaterialTheme.colorScheme.onSurface) },
        leadingIcon = {
...
